# margherita

./: Cargo.toml  README.md  bun.lockb  index.html  package.json  tailwind.config.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  markdown.rs
src/components/Editor/: Editor.tsx  EditorLine.tsx  debug.ts  document.ts  index.tsx  parser.ts  selection.ts  types.ts  useDocument.ts
src/components/FileTree/: index.tsx
