[package]
name = "margherita"
version = "0.1.0"
description = "a markdown editor"
authors = ["sibellavia"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.6", features = [] }
tauri-plugin-shell = "2.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = "0.12.2"
parking_lot = "0.12.3"
lazy_static = "1.5.0"
